Add basic structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "4.4.0"
+candle-lora = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
+candle-lora-macro = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
+derive_more = "0.99.17"
+serde = { version = "1.0.190", features = ["serde_derive"] }
