--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,12 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.4.0"
+candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
 candle-lora = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
 candle-lora-macro = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
+candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
 derive_more = "0.99.17"
 dyn-fmt = "0.4.0"
 serde = { version = "1.0.190", features = ["serde_derive"] }
+tokenizers = "0.14.1"
+uuid = { version = "1.5.0", features = ["v4"] }
