--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.4.0"
+anyhow = "1.0.75"
 candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
 candle-lora = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
 candle-lora-macro = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
