--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ clap = { version = "4.4.7", features = ["derive"] }
 candle-sampling = { git = "https://github.com/EricLBuehler/candle-sampling.git", version = "0.1.0" }
 futures = "0.3.29"
 tokio = { version = "1.33.0", features = ["sync"] }
+env_logger = "0.10.1"
+tracing = "0.1.40"
 
 [features]
 default = []
