--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,8 @@ jobs:
         with:
           command: fmt
           args: --all -- --check
-
+  
+  """
   clippy:
     name: Clippy
     runs-on: ubuntu-latest
@@ -56,7 +57,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --features no-paged-attention --workspace --tests --examples -- -D warnings
+          args: --workspace --tests --examples -- -D warnings
 
   docs:
     name: Docs
@@ -71,8 +72,9 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: doc
-          args: --features no-paged-attention --workspace
-
+          args: --workspace
+  """
+  
   typos:
     name: Typos
     runs-on: ubuntu-latest
