--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ env_logger = "0.10.1"
 tracing = "0.1.40"
 tch = { git = "https://github.com/EricLBuehler/tch-rs.git", branch = "copy_derive", version = "0.14.0" } # pending on LaurentMazare/tch-rs#823
 torch-sys = { git = "https://github.com/EricLBuehler/tch-rs.git", branch = "copy_derive", version = "0.14.0" } # pending on LaurentMazare/tch-rs#823
+range-checked = { git = "https://github.com/EricLBuehler/range-checked.git", version = "0.1.0" }
 
 [features]
 default = []
