--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ tracing = "0.1.40"
 tch = { git = "https://github.com/EricLBuehler/tch-rs.git", branch = "copy_derive", version = "0.14.0" } # pending on LaurentMazare/tch-rs#823
 torch-sys = { git = "https://github.com/EricLBuehler/tch-rs.git", branch = "copy_derive", version = "0.14.0" } # pending on LaurentMazare/tch-rs#823
 range-checked = { git = "https://github.com/EricLBuehler/range-checked.git", version = "0.1.0" }
+chrono = { version = "0.4.31", features = ["clock"] }
 
 [features]
 default = []
