Use updated bindgen_cuda which supports building both ptx and cuda libs

--- a/kernels/Cargo.toml
+++ b/kernels/Cargo.toml
@@ -9,5 +9,5 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 
 [build-dependencies]
-bindgen_cuda = {path = "/root/bindgen_cuda/", version= "0.1.5"}
+bindgen_cuda = {git = "https://github.com/guoqingbao/bindgen_cuda.git", version= "0.1.6"}
 anyhow = { version = "1", features = ["backtrace"] }
