--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,17 +8,17 @@ edition = "2021"
 [dependencies]
 actix-web = "4.4.0"
 anyhow = "1.0.75"
-candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
-candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
-candle-lora = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
-candle-lora-macro = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
-candle-lora-transformers = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
-candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
+candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
+candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
+#candle-lora = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
+#candle-lora-macro = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
+#candle-lora-transformers = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
+candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
 dyn-fmt = "0.4.0"
 serde = { version = "1.0.190", features = ["serde_derive"] }
-tokenizers = "0.15.0"
+tokenizers = "0.19.1"
 uuid = { version = "1.5.0", features = ["v4"] }
-candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
+candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
 hf-hub = "0.3.2"
 serde_json = "1.0.108"
 derive_more = "0.99.17"
@@ -26,9 +26,9 @@ accelerate-src = { version = "0.3.2", optional = true }
 intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
 cudarc = { version = "0.9.14", features = ["f16"], optional = true }
 half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
-candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.4.0", optional = true }
+candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", optional = true }
 clap = { version = "4.4.7", features = ["derive"] }
-candle-sampling = { git = "https://github.com/EricLBuehler/candle-sampling.git", version = "0.2.0" }
+#candle-sampling = { git = "https://github.com/EricLBuehler/candle-sampling.git", version = "0.2.0" }
 futures = "0.3.29"
 tokio = { version = "1.33.0", features = ["sync"] }
 env_logger = "0.10.1"
