build(config): update release profile

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,3 +52,7 @@ cudnn = ["candle-core/cudnn"]
 flash-attn = ["cuda", "candle-transformers/flash-attn"]
 mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
 nccl = ["cuda", "cudarc/nccl"]
+
+[profile.release]
+lto = "fat"
+codegen-units = 1
