Fix some warnings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,5 +59,6 @@
         "__bit_reference": "cpp",
         "__functional_base": "cpp",
         "__memory": "cpp"
-    }
+    },
+    "rust-analyzer.cargo.features": ["cuda"],
 }
