--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "candle-vllm"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -12,28 +12,28 @@ tower-http = { version = "0.5.1", features = ["cors"]}
 flume = "0.10.14"
 #actix-web = "4.8.0"
 anyhow = "1.0.75"
-rand = "0.8.5"
+rand = "0.9.0"
 rayon="1.10.0"
 hyper = { version = "0.14", features = ["full"] }
-candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }
-candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }
+candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
+candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
 #candle-lora = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
 #candle-lora-macro = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
 #candle-lora-transformers = { git = "https://github.com/EricLBuehler/candle-lora.git", version = "0.2.0" }
-candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }
+candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
 dyn-fmt = "0.4.0"
 serde = { version = "1.0.190", features = ["serde_derive"] }
-tokenizers = "0.19.1"
+tokenizers = "0.21.1"
 uuid = { version = "1.5.0", features = ["v4"] }
-candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }
+candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
 hf-hub = "0.3.2"
 serde_json = "1.0.108"
 derive_more = "0.99.17"
 accelerate-src = { version = "0.3.2", optional = true }
 intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
-cudarc = {version = "0.12.2", features = ["f16"], optional = true }
-half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
-candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.8.1", optional = true }
+cudarc = {version = "0.13.5", features = ["f16", "cuda-version-from-build-system"], optional = true }
+half = { version = "2.5.0", features = ["num-traits", "use-intrinsics", "rand_distr"] }
+candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.8.4", optional = true }
 clap = { version = "4.4.7", features = ["derive"] }
 #candle-sampling = { git = "https://github.com/EricLBuehler/candle-sampling.git", version = "0.2.0" }
 futures = "0.3.29"
@@ -48,6 +48,11 @@ thiserror = "1.0.58"
 metal = { version = "0.27.0", features = ["mps"], optional = true }
 kernels = {path = "./kernels", version="0.1.0", optional = true}
 metal-kernels = {path = "./metal-kernels", version="0.1.0", optional = true}
+lazy_static = {version = "1.4.0"}
+interprocess = "2.2.2"
+serde-big-array = "0.5.1"
+bincode = { version = "1.3.1" }
+ftail = "0.2"
 
 [features]
 accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
