--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ interprocess = "2.2.2"
 serde-big-array = "0.5.1"
 bincode = { version = "1.3.1" }
 ftail = "0.2"
+indicatif = "0.17.11"
 
 [features]
 accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
