--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ serde_json = "1.0.108"
 derive_more = "0.99.17"
 accelerate-src = { version = "0.3.2", optional = true }
 intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
-cudarc = {version = "0.13.5", features = ["f16", "cuda-version-from-build-system"], optional = true }
+cudarc = {version = "0.13.9", features = ["f16", "cuda-version-from-build-system"], optional = true }
 half = { version = "2.5.0", features = ["num-traits", "use-intrinsics", "rand_distr"] }
 candle-flash-attn = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", branch = "candle-main", optional = true }
 clap = { version = "4.4.7", features = ["derive"] }
@@ -54,6 +54,7 @@ serde-big-array = "0.5.1"
 bincode = { version = "1.3.1" }
 ftail = "0.2"
 indicatif = "0.17.11"
+mpi = { version = "0.8.0", optional = true}
 
 [features]
 accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
@@ -63,3 +64,4 @@ cudnn = ["candle-core/cudnn"]
 flash-attn = ["cuda", "candle-transformers/flash-attn"]
 mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
 nccl = ["cuda", "cudarc/nccl"]
+mpi = ["cuda", "cudarc/nccl", "dep:mpi"]
