--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,8 @@ tracing = "0.1.40"
 range-checked = { git = "https://github.com/EricLBuehler/range-checked.git", version = "0.1.0" }
 either = { version = "1.13.0", features = ["serde"] }
 dirs = "5.0.1"
-minijinja = "1.0.12"
+minijinja = { version = "2.0.2", features = ["builtins", "json"] }
+minijinja-contrib = { version = "2.0.2", features = ["pycompat"] }
 thiserror = "1.0.58"
 metal = { version = "0.27.0", features = ["mps"], optional = true }
 kernels = {path = "./kernels", version="0.1.0", optional = true}
