--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,9 +54,12 @@ interprocess = "2.2.2"
 serde-big-array = "0.5.1"
 bincode = { version = "1.3.1" }
 ftail = "0.2"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 indicatif = "0.17.11"
 mpi = { version = "0.8.0", optional = true}
 parking_lot = "0.12"
+akin = "0.4.0"
+itertools = "0.13.0"
 
 [features]
 accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
