Support NUMA binding for multi-rank inference

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,7 @@ parking_lot = "0.12"
 akin = "0.4.0"
 itertools = "0.13.0"
 chrono = "0.4.41"
+which = "5"
 
 [features]
 accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
