--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,7 @@ akin = "0.4.0"
 itertools = "0.13.0"
 chrono = "0.4.41"
 which = "5"
+ahash = "0.8.11"
 
 [features]
 accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
