--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,8 @@ serde_json = "1.0.108"
 derive_more = "0.99.17"
 accelerate-src = { version = "0.3.2", optional = true }
 intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
-cudarc = {version = "0.13.9", features = ["f16", "cuda-version-from-build-system"], optional = true }
+#cudarc = {version = "0.13.9", features = ["f16", "cuda-version-from-build-system"], optional = true }
+cudarc = {git = "https://github.com/guoqingbao/cudarc.git", version = "0.13.9", features = ["f16", "cuda-version-from-build-system"], optional = true, rev="cc13092" }
 half = { version = "2.5.0", features = ["num-traits", "use-intrinsics", "rand_distr"] }
 candle-flash-attn = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", optional = true, rev = "67f5ca8" }
 clap = { version = "4.4.7", features = ["derive"] }
