--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ serde_json = "1.0.108"
 derive_more = "0.99.17"
 accelerate-src = { version = "0.3.2", optional = true }
 intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
-cudarc = {git = "https://github.com/guoqingbao/cudarc.git", version = "0.13.9", features = ["f16", "cuda-version-from-build-system"], optional = true, rev="cc13092" }
+#cudarc = {git = "https://github.com/guoqingbao/cudarc.git", version = "0.13.9", features = ["f16", "cuda-version-from-build-system"], optional = true, rev="cc13092" }
 half = { version = "2.5.0", features = ["num-traits", "use-intrinsics", "rand_distr"] }
 clap = { version = "4.4.7", features = ["derive"] }
 futures = "0.3.29"
@@ -49,6 +49,7 @@ interprocess = "2.2.2"
 serde-big-array = "0.5.1"
 bincode = { version = "1.3.1" }
 ftail = "0.2"
+tqdm = "0.8.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 indicatif = "0.17.11"
 mpi = { version = "0.8.0", optional = true}
@@ -66,5 +67,6 @@ metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal", "d
 cudnn = ["candle-core/cudnn"]
 flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn", "attention-rs/flash-attn"]
 mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
-nccl = ["cuda", "cudarc/nccl"]
-mpi = ["cuda", "cudarc/nccl", "dep:mpi"]
+nccl = ["candle-core/nccl"]
+mpi = ["candle-core/nccl", "dep:mpi"]
+graph = ["attention-rs/graph", "candle-core/graph"]
